# AndroidChargerLogAnalysis

./: .gitignore  README.md  build.bash  build.bat  build.py  chargerlog.spec  launcher.py  方案设计.md
cli/: main.cpp
core/: CMakeLists.txt  README.md  cli_main.cpp
core/include/chargerlog/: base_charger_parser.h  cache_manager.h  charger_data_point.h  healthd_parser.h  parser_factory.h  project_config.h  stats_calculator.h
core/src/: cache_manager.cpp  charger_data_point.cpp  healthd_parser.cpp  parser_factory.cpp  project_config.cpp  stats_calculator.cpp
server/: app.py  config.py
server/routes/: analysis.py  history.py  upload.py
server/utils/: __init__.py  cpp_bridge.py  decompressor.py
tests/: test_cache_manager.cpp  test_decompressor.py  test_healthd_parser.cpp
web/: index.html  package-lock.json  package.json
web/src/: App.vue  main.ts
web/src/api/: index.ts
web/src/components/: ChartCard.vue  StatsTable.vue  TimeRangeSlider.vue
web/src/pages/: Dashboard.vue  HistoryPage.vue  UploadPage.vue
web/src/router/: index.ts
web/src/utils/: threshold.ts  time.ts
